testdata/e2e/examples/list/list.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: cm-1
    namespace: default
  data:
    key: 'yes'
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: cm-2
    namespace: default
  data:
    key: 'no'
