testdata/e2e/examples/list/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: list
spec:
  steps:
  - try:
    - apply:
        file: list.yaml
    - assert:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: cm-1
            namespace: default
          data:
            key: 'yes'
    - assert:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: cm-2
            namespace: default
          data:
            key: 'no'
